@@ -10,7 +10,8 @@ import com.sandbox.payments.domain.port.PaymentRepository;
 import com.sandbox.shared.kernel.exception.DomainException;
 
 import java.util.Optional;
-import java.util.concurrent.StructuredTaskScope;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Executors;
 
 public class GetOrderDetailsUseCase {
 
@@ -26,22 +27,30 @@ public class GetOrderDetailsUseCase {
         this.paymentRepository = paymentRepository;
     }
 
+    /**
+     * La version anterior usaba StructuredTaskScope y estaba rota por partida doble:
+     * hacia fork() despues de join() (IllegalStateException garantizada en ejecucion) y,
+     * al ser API preview, obligaba a --enable-preview, lo que emite bytecode que ArchUnit
+     * no sabe leer. Un executor de hilos virtuales da el mismo paralelismo sin API preview.
+     */
     public OrderDetailsView execute(String orderId) {
-        var id = OrderId.of(orderId);
-        try (var scope = StructuredTaskScope.open(StructuredTaskScope.Joiner.allSuccessfulOrThrow())) {
-            var orderTask = scope.fork(() -> orderRepository.findById(id)
-                    .orElseThrow(() -> new DomainException("Order not found: " + orderId)));
-            scope.join();
+        var order = orderRepository.findById(OrderId.of(orderId))
+                .orElseThrow(() -> new DomainException("Order not found: " + orderId));
 
-            var order = orderTask.get();
-            var customerTask = scope.fork(() -> customerRepository.findById(order.customerId()));
-            var paymentTask = scope.fork(() -> paymentRepository.findByOrderReference(order.id().value().toString()));
-            scope.join();
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            var customer = executor.submit(() -> customerRepository.findById(order.customerId()));
+            var payment = executor.submit(() -> paymentRepository.findByOrderReference(
+                    order.id().value().toString()));
 
-            return new OrderDetailsView(order, customerTask.get(), paymentTask.get());
+            return new OrderDetailsView(order, customer.get(), payment.get());
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
             throw new DomainException("Interrupted while loading order details");
+        } catch (ExecutionException e) {
+            if (e.getCause() instanceof DomainException domainException) {
+                throw domainException;
+            }
+            throw new DomainException("Could not load order details: " + e.getCause().getMessage());
         }
     }
 
